# OpenJPH

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  DoxygenStyle.md  README.md  license.md  license.txt  ojph_libname.cmake  target_arch.cmake
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: ccp-workflow.yml  ci-workflow.yml  cifuzz.yml  codeql.yml  emcc.yml
docs/: .gitignore  Doxyfile  DoxygenStyle.md  OpenJPH_docs.css  compiling.md  docker.md  doxygen_style.md  fuzzing.md  status.md  usage_examples.md  web_demos.md
examples/yuv/: package.json
examples/yuv/src/: index.js  savePixelData.js  validateOptions.js  yuv_generator.js  yuv_generator_tests.js
fuzzing/: CMakeLists.txt  Dockerfile  README.md
fuzzing/fuzz_targets/: j2c_expand_fuzz_target.cpp  ojph_compress_fuzz_target.cpp  ojph_expand_fuzz_target.cpp
scripts/: build_test.sh
src/: openjph.pc.in  pkg-config.pc.cmake
src/apps/: CMakeLists.txt
src/apps/apps.xcodeproj/: project.pbxproj
src/apps/apps.xcodeproj/project.xcworkspace/xcuserdata/aous.xcuserdatad/: UserInterfaceState.xcuserstate
src/apps/apps.xcodeproj/project.xcworkspace/xcuserdata/aous.xcuserdatad/xcdebugger/: Expressions.xcexplist
src/apps/apps.xcodeproj/xcshareddata/xcschemes/: Build All.xcscheme  ojph_compress.xcscheme  ojph_expand.xcscheme
src/apps/apps.xcodeproj/xcuserdata/aous.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
src/apps/apps.xcodeproj/xcuserdata/aous.xcuserdatad/xcschemes/: xcschememanagement.plist
src/apps/common/: ojph_img_io.h  ojph_socket.h  ojph_sockets.h  ojph_threads.h
src/apps/ojph_compress/: CMakeLists.txt  ojph_compress.cpp
src/apps/ojph_expand/: CMakeLists.txt  ojph_expand.cpp
src/apps/ojph_stream_expand/: CMakeLists.txt  ojph_str_ex_support.cpp  ojph_str_ex_support.h  ojph_stream_expand.cpp  stream_expand_support.cpp  stream_expand_support.h  threaded_frame_processors.cpp  threaded_frame_processors.h
src/apps/others/: ojph_img_io.cpp  ojph_img_io_avx2.cpp  ojph_img_io_sse41.cpp  ojph_socket.cpp  ojph_sockets.cpp  ojph_threads.cpp
src/core/: CMakeLists.txt
src/core/codestream/: ojph_bitbuffer_read.h  ojph_bitbuffer_write.h  ojph_codeblock.cpp  ojph_codeblock.h  ojph_codeblock_fun.cpp  ojph_codeblock_fun.h  ojph_codestream.cpp  ojph_codestream_avx.cpp  ojph_codestream_avx2.cpp  ojph_codestream_gen.cpp  ojph_codestream_local.cpp  ojph_codestream_local.h  ojph_codestream_sse.cpp  ojph_codestream_sse2.cpp  ojph_codestream_ssse3.cpp  ojph_codestream_vsx.cpp  ojph_codestream_wasm.cpp  ojph_params.cpp  ojph_params_local.h  ojph_precinct.cpp  ojph_precinct.h  ojph_resolution.cpp  ojph_resolution.h  ojph_subband.cpp  ojph_subband.h  ojph_tile.cpp  ojph_tile.h  ojph_tile_comp.cpp  ojph_tile_comp.h
src/core/coding/: ojph_block_common.cpp  ojph_block_decoder.cpp  ojph_block_decoder.h  ojph_block_decoder2.cpp  ojph_block_decoder32.cpp  ojph_block_decoder64.cpp  ojph_block_decoder_avx2.cpp  ojph_block_decoder_sse2.cpp  ojph_block_decoder_ssse3.cpp  ojph_block_decoder_vsx.cpp  ojph_block_decoder_wasm.cpp  ojph_block_encoder.cpp  ojph_block_encoder.h  ojph_block_encoder_avx2.cpp  ojph_block_encoder_avx512.asm  ojph_block_encoder_avx512.cpp  tsc-measure.h
src/core/common/: ojph_arch.h  ojph_arg.h  ojph_base.h  ojph_codestream.h  ojph_defs.h  ojph_file.h  ojph_mem.h  ojph_message.h  ojph_params.h  ojph_version.h
src/core/core.xcodeproj/: project.pbxproj
src/core/core.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/core/core.xcodeproj/project.xcworkspace/xcuserdata/aous.xcuserdatad/: UserInterfaceState.xcuserstate
src/core/core.xcodeproj/xcshareddata/xcschemes/: openjph.xcscheme
src/core/core.xcodeproj/xcuserdata/aous.xcuserdatad/xcschemes/: xcschememanagement.plist
src/core/openjph/: ojph_arch.h  ojph_codestream.h  ojph_file.h  ojph_mem.h  ojph_version.h
src/core/others/: ojph_arch.cpp  ojph_file.cpp  ojph_img_conv.cpp  ojph_img_conv_avx2.cpp  ojph_img_conv_sse41.cpp  ojph_mem.cpp  ojph_message.cpp
src/core/transform/: ojph_colour.cpp  ojph_colour.h  ojph_colour_avx.cpp  ojph_colour_avx2.cpp  ojph_colour_avx512.cpp  ojph_colour_local.h  ojph_colour_sse.cpp  ojph_colour_sse2.cpp  ojph_colour_wasm.cpp  ojph_transform.cpp  ojph_transform.h  ojph_transform_avx.cpp  ojph_transform_avx2.cpp  ojph_transform_avx512.cpp  ojph_transform_local.h  ojph_transform_sse.cpp  ojph_transform_sse2.cpp  ojph_transform_vsx.cpp  ojph_transform_wasm.cpp
subprojects/js/: .gitignore  CMakeLists.txt  build.sh  emccdocker.sh  emscripten-docker.sh
subprojects/js/html/: .gitignore  index.html  libopenjph  libopenjph.js  libopenjph.wasm  libopenjph_simd.js  libopenjph_simd.wasm  test.j2c
subprojects/js/src/: ojph_wrapper.cpp  ojph_wrapper.h  ojph_wrapper_wasm.cpp
subprojects/js/standalone/: README.md  build.sh  com_decom.sh  com_decom_yuv.sh
tests/: CMakeLists.txt  com_decom.sh  com_decom_yuv.sh  compare_files.cpp  mse_pae.cmake  mse_pae.cpp  psnr_pae.cpp  test.py  test_codestream_api.cpp  test_executables.cpp
tests/test_helpers/: Readme.md  convert_mse_pae_to_tests.cpp  ht_cmdlines.txt  raw_tests.txt
